--- a/notebooks/end2end_workflow.ipynb
+++ b/notebooks/end2end_workflow.ipynb
@@ -364,13 +364,366 @@
    "id": "ee85ea3b-4f21-4d7f-98ae-06c37ce11efa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-20T12:09:57.615822Z",
-     "start_time": "2025-03-20T12:09:57.614511Z"
+     "end_time": "2025-03-20T12:14:50.250339Z",
+     "start_time": "2025-03-20T12:14:50.247314Z"
     }
    },
-   "source": [],
+   "source": [
+    "query = \"\"\"\n",
+    "Then I would like you to create and execute workflow with auto strategy and previously created connectors MyExampleSourceS3-1 and MyExampleDestinationS3-1. Do not run the workflow yet ;)\n",
+    "\"\"\""
+   ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-20T12:16:00.177308Z",
+     "start_time": "2025-03-20T12:14:53.198722Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "client = MCPClient()\n",
+    "try:\n",
+    "    await client.connect_to_server('server.py')\n",
+    "    await client.chat_loop()\n",
+    "finally:\n",
+    "    await client.cleanup()"
+   ],
+   "id": "5f21ca1dab126fd9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;32mQuery\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Query</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;31mASSISTANT\u001B[0m\n",
+       "I'll help you create a workflow using the source and destination connectors you mentioned. I understand that you \n",
+       "want to create the workflow but not run it yet.\n",
+       "\n",
+       "To create a workflow, we need the following required parameters:\n",
+       "- source_id and destination_id \u001B[1m(\u001B[0mwe'll get these from listing the connectors\u001B[1m)\u001B[0m\n",
+       "- name for the workflow\n",
+       "- workflow_type \u001B[1m(\u001B[0myou mentioned \u001B[32m\"auto strategy\"\u001B[0m which we'll map to \u001B[32m\"basic\"\u001B[0m type\u001B[1m)\u001B[0m\n",
+       "\n",
+       "Let me first check the existing connectors to get their IDs:\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">ASSISTANT</span>\n",
+       "I'll help you create a workflow using the source and destination connectors you mentioned. I understand that you \n",
+       "want to create the workflow but not run it yet.\n",
+       "\n",
+       "To create a workflow, we need the following required parameters:\n",
+       "- source_id and destination_id <span style=\"font-weight: bold\">(</span>we'll get these from listing the connectors<span style=\"font-weight: bold\">)</span>\n",
+       "- name for the workflow\n",
+       "- workflow_type <span style=\"font-weight: bold\">(</span>you mentioned <span style=\"color: #008000; text-decoration-color: #008000\">\"auto strategy\"</span> which we'll map to <span style=\"color: #008000; text-decoration-color: #008000\">\"basic\"</span> type<span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "Let me first check the existing connectors to get their IDs:\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL CALL\u001B[0m\n",
+       "Accept execution of list_sources with args {}? \u001B[1;35m[y/n]\u001B[0m \u001B[1;36m(y)\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL CALL</span>\n",
+       "Accept execution of list_sources with args {}? <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">[y/n]</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">(y)</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL OUTPUT\u001B[0m:\n",
+       "Available sources:\n",
+       "- MyExampleSourceS3-\u001B[1;36m1\u001B[0m \u001B[1m(\u001B[0mID: \u001B[93m733fc931-8ed3-4b07-9bbe-9f45f044c76f\u001B[0m\u001B[1m)\u001B[0m\n",
+       "- MyExampleSourceS3-\u001B[1;36m1\u001B[0m \u001B[1m(\u001B[0mID: \u001B[93m59366e40-869b-46f1-834f-8acc4fbac5af\u001B[0m\u001B[1m)\u001B[0m\n",
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL OUTPUT</span>:\n",
+       "Available sources:\n",
+       "- MyExampleSourceS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> <span style=\"font-weight: bold\">(</span>ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">733fc931-8ed3-4b07-9bbe-9f45f044c76f</span><span style=\"font-weight: bold\">)</span>\n",
+       "- MyExampleSourceS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> <span style=\"font-weight: bold\">(</span>ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">59366e40-869b-46f1-834f-8acc4fbac5af</span><span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL CALL\u001B[0m\n",
+       "Accept execution of list_destinations with args {}? \u001B[1;35m[y/n]\u001B[0m \u001B[1;36m(y)\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL CALL</span>\n",
+       "Accept execution of list_destinations with args {}? <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">[y/n]</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">(y)</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL OUTPUT\u001B[0m:\n",
+       "Available destinations:\n",
+       "- MyExampleDestinationS3-\u001B[1;36m1\u001B[0m \u001B[1m(\u001B[0mID: \u001B[93m08c6de3b-cc46-494f-95bc-075d36f6a63c\u001B[0m\u001B[1m)\u001B[0m\n",
+       "- MyExampleDestinationS3-\u001B[1;36m1\u001B[0m \u001B[1m(\u001B[0mID: \u001B[93m6ce77851-2643-40b7-bb14-80f9f3c9312b\u001B[0m\u001B[1m)\u001B[0m\n",
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL OUTPUT</span>:\n",
+       "Available destinations:\n",
+       "- MyExampleDestinationS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> <span style=\"font-weight: bold\">(</span>ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">08c6de3b-cc46-494f-95bc-075d36f6a63c</span><span style=\"font-weight: bold\">)</span>\n",
+       "- MyExampleDestinationS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> <span style=\"font-weight: bold\">(</span>ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">6ce77851-2643-40b7-bb14-80f9f3c9312b</span><span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;31mASSISTANT\u001B[0m\n",
+       "Now I'll create a workflow using these connectors. I'll use a simple descriptive name for the workflow and set it \n",
+       "as a basic workflow type:\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">ASSISTANT</span>\n",
+       "Now I'll create a workflow using these connectors. I'll use a simple descriptive name for the workflow and set it \n",
+       "as a basic workflow type:\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL CALL\u001B[0m\n",
+       "Accept execution of create_workflow with args {'workflow_config': {'name': 'MyS3ToS3Workflow', 'source_id': \n",
+       "'733fc931-8ed3-4b07-9bbe-9f45f044c76f', 'destination_id': '08c6de3b-cc46-494f-95bc-075d36f6a63c', 'workflow_type': \n",
+       "'basic'}}? \u001B[1;35m[y/n]\u001B[0m \u001B[1;36m(y)\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL CALL</span>\n",
+       "Accept execution of create_workflow with args {'workflow_config': {'name': 'MyS3ToS3Workflow', 'source_id': \n",
+       "'733fc931-8ed3-4b07-9bbe-9f45f044c76f', 'destination_id': '08c6de3b-cc46-494f-95bc-075d36f6a63c', 'workflow_type': \n",
+       "'basic'}}? <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">[y/n]</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">(y)</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;36mTOOL OUTPUT\u001B[0m:\n",
+       "Workflow Information:\n",
+       "Name: MyS3ToS3Workflow\n",
+       "ID: \u001B[93m039a84fd-f0ca-453b-bd89-1f30ecdad0d5\u001B[0m\n",
+       "Status: WorkflowState.ACTIVE\n",
+       "Type: WorkflowType.BASIC\n",
+       "\n",
+       "Sources:\n",
+       "  - \u001B[93m733fc931-8ed3-4b07-9bbe-9f45f044c76f\u001B[0m\n",
+       "\n",
+       "Destinations:\n",
+       "  - \u001B[93m08c6de3b-cc46-494f-95bc-075d36f6a63c\u001B[0m\n",
+       "\n",
+       "Schedule:\n",
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">TOOL OUTPUT</span>:\n",
+       "Workflow Information:\n",
+       "Name: MyS3ToS3Workflow\n",
+       "ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">039a84fd-f0ca-453b-bd89-1f30ecdad0d5</span>\n",
+       "Status: WorkflowState.ACTIVE\n",
+       "Type: WorkflowType.BASIC\n",
+       "\n",
+       "Sources:\n",
+       "  - <span style=\"color: #ffff00; text-decoration-color: #ffff00\">733fc931-8ed3-4b07-9bbe-9f45f044c76f</span>\n",
+       "\n",
+       "Destinations:\n",
+       "  - <span style=\"color: #ffff00; text-decoration-color: #ffff00\">08c6de3b-cc46-494f-95bc-075d36f6a63c</span>\n",
+       "\n",
+       "Schedule:\n",
+       "\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;31mASSISTANT\u001B[0m\n",
+       "Great! I've created the workflow with the following specifications:\n",
+       "- Name: MyS3ToS3Workflow\n",
+       "- Source: MyExampleSourceS3-\u001B[1;36m1\u001B[0m\n",
+       "- Destination: MyExampleDestinationS3-\u001B[1;36m1\u001B[0m\n",
+       "- Type: basic \u001B[1m(\u001B[0mauto strategy\u001B[1m)\u001B[0m\n",
+       "\n",
+       "The workflow has been created successfully with ID: \u001B[93m039a84fd-f0ca-453b-bd89-1f30ecdad0d5\u001B[0m\n",
+       "\n",
+       "As requested, I have not run the workflow. When you want to run it, just let me know and I can help you with that!\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">ASSISTANT</span>\n",
+       "Great! I've created the workflow with the following specifications:\n",
+       "- Name: MyS3ToS3Workflow\n",
+       "- Source: MyExampleSourceS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>\n",
+       "- Destination: MyExampleDestinationS3-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>\n",
+       "- Type: basic <span style=\"font-weight: bold\">(</span>auto strategy<span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "The workflow has been created successfully with ID: <span style=\"color: #ffff00; text-decoration-color: #ffff00\">039a84fd-f0ca-453b-bd89-1f30ecdad0d5</span>\n",
+       "\n",
+       "As requested, I have not run the workflow. When you want to run it, just let me know and I can help you with that!\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;32mQuery\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Query</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;31mASSISTANT\u001B[0m\n",
+       "I see you've typed \u001B[32m\"q\"\u001B[0m. If you're trying to quit or end the conversation, you can simply stop responding. If you \n",
+       "have a different question or need assistance with something else, please let me know what you'd like help with and \n",
+       "I'll be happy to assist you.\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">ASSISTANT</span>\n",
+       "I see you've typed <span style=\"color: #008000; text-decoration-color: #008000\">\"q\"</span>. If you're trying to quit or end the conversation, you can simply stop responding. If you \n",
+       "have a different question or need assistance with something else, please let me know what you'd like help with and \n",
+       "I'll be happy to assist you.\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;32mQuery\u001B[0m: "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Query</span>: </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -378,7 +731,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5f21ca1dab126fd9"
+   "id": "1b5a1713f9b3d251"
   }
  ],
  "metadata": {
