Add extensive example

--- a/notebooks/end2end_workflow.ipynb
+++ b/notebooks/end2end_workflow.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "client = MCPClient()\n",
     "try:\n",
-    "    await client.connect_to_server('server.py')\n",
+    "    await client.connect_to_server('uns_mcp/run.py')\n",
     "    await client.chat_loop()\n",
     "finally:\n",
     "    await client.cleanup()"
@@ -416,7 +416,7 @@
    "source": [
     "client = MCPClient()\n",
     "try:\n",
-    "    await client.connect_to_server('server.py')\n",
+    "    await client.connect_to_server('uns_mcp/run.py')\n",
     "    await client.chat_loop()\n",
     "finally:\n",
     "    await client.cleanup()"
