--- a/notebooks/custom_workflow.ipynb
+++ b/notebooks/custom_workflow.ipynb
@@ -28,7 +28,7 @@
      "start_time": "2025-03-20T14:43:34.280147Z"
     }
    },
-   "source": "from minimal_client.run import MCPClient",
+   "source": "from minimal_client.client import MCPClient",
    "outputs": [],
    "execution_count": 2
   },
@@ -61,7 +61,7 @@
    "source": [
     "client = MCPClient()\n",
     "try:\n",
-    "    await client.connect_to_server('uns_mcp/run.py')\n",
+    "    await client.connect_to_server('uns_mcp/server.py')\n",
     "    await client.chat_loop()\n",
     "finally:\n",
     "    await client.cleanup()"
@@ -395,7 +395,7 @@
    "source": [
     "client = MCPClient()\n",
     "try:\n",
-    "    await client.connect_to_server('uns_mcp/run.py')\n",
+    "    await client.connect_to_server('uns_mcp/server.py')\n",
     "    await client.chat_loop()\n",
     "finally:\n",
     "    await client.cleanup()"
