--- a/notebooks/custom_workflow.ipynb
+++ b/notebooks/custom_workflow.ipynb
@@ -440,10 +440,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-03-21T14:23:01.268127Z",
      "start_time": "2025-03-21T14:22:05.337707Z"
     }
    },
@@ -795,9 +793,63 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;31mASSISTANT\u001B[0m\n",
+       "Perfect! I've completed both tasks:\n",
+       "\u001B[1;36m1\u001B[0m. Created a custom workflow named \u001B[32m\"Justhires\"\u001B[0m with the specified hi_res strategy settings\n",
+       "\u001B[1;36m2\u001B[0m. Executed the workflow\n",
+       "\n",
+       "The workflow has been created and started executing. You can monitor the progress of this execution by checking the\n",
+       "jobs associated with this workflow. Would you like me to help you check the status of the workflow execution?\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">ASSISTANT</span>\n",
+       "Perfect! I've completed both tasks:\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>. Created a custom workflow named <span style=\"color: #008000; text-decoration-color: #008000\">\"Justhires\"</span> with the specified hi_res strategy settings\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>. Executed the workflow\n",
+       "\n",
+       "The workflow has been created and started executing. You can monitor the progress of this execution by checking the\n",
+       "jobs associated with this workflow. Would you like me to help you check the status of the workflow execution?\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\u001B[1;32mQuery\u001B[0m (q/quit to end chat): "
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Query</span> (q/quit to end chat): </pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "metadata": {},
